# py-geothmetic-meandian

./: README.md  setup.cfg
src/geothmetic_meandian/: __init__.py  geometric_mean.py
