[metadata]
# replace with your username:
name = geothmetic_meandian
version = 0.1.2
author = Mark Delcambre
author_email = mark@charkbot.com
description = A python implementation of the "Geothmetic Meandian" as proposed in XKCD #2435
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mdelcambre/py-geothmetic-meandian
project_urls =
    Bug Tracker = https://github.com/mdelcambre/py-geothmetic-meandian/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src